# livarot_pybind

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.centos  Dockerfile.debian  MANIFEST.in  README.md  build_all.sh  livarot-example.py  livarot_pybind.cpp  pylivarot.py  setup.cfg  setup.py
livarot/: AlphaLigne.cpp  BitLigne.cpp  CMakeCache.txt  CMakeLists.txt  Path.cpp  Path.h  PathConversion.cpp  PathCutting.cpp  PathOutline.cpp  PathSimplify.cpp  README  Shape.cpp  Shape.h  ShapeMisc.cpp  ShapeRaster.cpp  ShapeSweep.cpp  bool-op.h  float-line.cpp  float-line.h  geom.cpp  int-line.cpp  int-line.h  path-description.cpp  path-description.h  stringstream.cpp  sweep-event.cpp  sweep-tree-list.cpp  sweep-tree.cpp  sweep-tree.h
pylivarot/: __init__.py
test/: test_bbox.py  test_bool_pathop.py  test_build_path.py  test_outline_path.py  test_path.py  test_simplify_path.py  test_transform.py
