[metadata]
name = pylivarot
version = 1.0.2
author = Catherine Holloway
author_email = milankie@gmail.com
description = Python bindings to Inkscape\'s livarot library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CatherineH/livarot_pybind
project_urls =
    Bug Tracker = https://github.com/CatherineH/livarot_pybind/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
license_files = LICENSE
